tests/ui/fail/missing_select.stderr
error: Expected `SELECT` at the beginning of SQL filter, got `FROM` instead

         = help: SQL filter must start with `SELECT` followed by columns, table and WHERE clause
         = note: It is case insensitive so `select` will also work.

 --> tests/ui/fail/missing_select.rs:5:9
  |
5 |         FROM users WHERE  // Missing SELECT clause
  |         ^^^^

error[E0433]: failed to resolve: use of undeclared type `UserFilter`
  --> tests/ui/fail/missing_select.rs:11:19
   |
11 |     let _filter = UserFilter::new(1);
   |                   ^^^^^^^^^^ use of undeclared type `UserFilter`
